Settings options in navigation is cut off: Fixes #1279

--- a/resources/assets/css/sidebar.css
+++ b/resources/assets/css/sidebar.css
@@ -119,7 +119,13 @@
     }
 
     #left-sidebar-wrapper ul {
-        min-height: 720px;
+        min-height: 730px;
+    }
+
+    @media (max-height: 744px) {
+        div.nav-footer {
+            min-width: 234px !important;
+        }
     }
 
     .sidebar-nav li > a {
